gitops/flux-receiver/httproute-flux-receiver.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-receiver
  namespace: flux-system
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: http   # listener name on the Gateway
  hostnames:
    - "webhook.vps.kubespaces.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webhook-receiver
          port: 80
